--- a/Css/diseño.css
+++ b/Css/diseño.css
@@ -5,3 +5,13 @@ body{
     color: brown;
     background: black
 }
+
+#contenedor{
+    border: 3px solid gray;
+    padding: 1px;
+    border-radius: 30%
+}
+
+#contenedor h1{
+    color: green;
+}
