para que se vea bien

--- a/Css/Style.css
+++ b/Css/Style.css
@@ -1,6 +1,6 @@
 body{
     text-align: center;
-    font-family: cursive;
+    font-family: monospace;
     font-size: 3em;
     color: brown;
     background: black
