--- a/Css/Style.css
+++ b/Css/Style.css
@@ -1,17 +1,49 @@
 body{
     text-align: center;
     font-family: monospace;
-    font-size: 3em;
     color: brown;
-    background: black
+    background: black;
+    padding: 0%;
+}
+
+#cabecera{
+    box-shadow: 5px 4px 10px #666;
+    background: blueviolet;
+    border-radius: 20%;
+    height: 20%;
+    width: 70%;
+    padding: 0%
+    
+
+}
+
+#blog{
+    margin: 2%;
+    padding: 0%;
+    font-size: 400%;
+    color: aqua;
+    text-align: left;
+    font-family: cursive;
+}
+
+#subtitulo{
+    font-family: sans-serif;
+    padding: 0%;
+    margin: 2%;
+    font-size: 200%;
+    color: whitesmoke;
+
 }
 
 #contenedor{
+    width: 70%;
+    background:wheat;
     border: 3px solid gray;
-    padding: 1px;
     border-radius: 30%
 }
 
-#contenedor h1{
+#contenedor h2{
+    font-size: 2em; 
+    font-family: georgia;
     color: green;
 }
