--- a/Css/Style.css
+++ b/Css/Style.css
@@ -1,17 +1,21 @@
 body{
     text-align: center;
     font-family: monospace;
-    color: brown;
-    background: black;
+    color: wheat;
+    background:url(joker.png)no-repeat center;
+    background-size: 200%;
     padding: 0%;
 }
 
 #cabecera{
+    position:absolute;
+    top:70%;
+    left:25%;
     box-shadow: 5px 4px 10px #666;
     background: blueviolet;
     border-radius: 20%;
-    height: 20%;
-    width: 70%;
+    height: 14%;
+    width: 54%;
     padding: 0%
     
 
@@ -30,20 +34,22 @@ body{
     font-family: sans-serif;
     padding: 0%;
     margin: 2%;
-    font-size: 200%;
+    font-size: 40%;
     color: whitesmoke;
 
 }
 
 #contenedor{
     width: 70%;
-    background:wheat;
-    border: 3px solid gray;
-    border-radius: 30%
+    border: 3px solid gray; 
 }
 
 #contenedor h2{
     font-size: 2em; 
     font-family: georgia;
     color: green;
+}
+
+img{
+    width: 6%;
 }
